@@ -1,3 +1,10 @@
+2006-10-06 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSToolTips.h: Remove some ivars
+	* Source/GSToolTips.m: Move ivars to be static variables for common
+	use by all tool tips.  Cancel an in-progress tooltip when a new one
+	starts.
+
 2006-10-04 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/GSToolTips.h: create tool tip wondow fully on screen
